[feat] - add NotificationAAR api
