# docs/openapi/pn-internal-templates-v1.yaml
@@ -300,9 +300,84 @@ paths:
               schema:
                 $ref: 'remote-refs.yaml#/components/schemas/Problem'
 
+  /templates-engine-private/v1/templates/notification-aar:
+    put:
+      summary: Generazione del pdf legato al template NotificationAAR
+      description: Genera un documento PDF basato sul template NotificationAAR.
+      operationId: notificationAAR
+      tags:
+        - PdfTemplate
+      parameters:
+        - in: header
+          name: X-Language
+          description: Lingua del documento
+          required: true
+          schema:
+            type: string
+            enum:
+              - it
+              - de
+              - sl
+              - fr
+            default: "it"
+      requestBody:
+        description: Parametri necessari per generare il documento
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NotificationAAR'
+
+      responses:
+        '200':
+          description: Ok
+          headers:
+            Content-Type:
+              description: Tipo di contenuto del documento
+              schema:
+                type: string
+                example: application/pdf
+            Content-Disposition:
+              description: Disposizione del contenuto per il download come allegato
+              schema:
+                type: string
+                example: attachment; filename="document.pdf"
+          content:
+            application/pdf:
+              schema:
+                type: string
+                format: binary
+        "404":
+          description: Indica che la richiesta con requestId non è stata trovata
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'remote-refs.yaml#/components/schemas/Problem'
 
 components:
   schemas:
+    NotificationAAR:
+      type: object
+      properties:
+        notification:
+          $ref: '#/components/schemas/Notification'
+        qrCodeQuickAccessLink:
+          type: string
+        recipient:
+          $ref: '#/components/schemas/Recipient'
+        piattaformaNotificheURL:
+          type: string
+        piattaformaNotificheURLLabel:
+          type: string
+        perfezionamentoURL:
+          type: string
+        perfezionamentoURLLabel:
+          type: string
+        sendURL:
+          type: string
+        sendURLLAbel:
+          type: string
+
     NotificationCancelledLegalFact:
       type: object
       properties:
@@ -383,6 +458,8 @@ components:
       type: object
       properties:
         iun:
+          type: string
+        subject:
           type: string
         sender:
           $ref: '#/components/schemas/NotificationSender'
